<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="MENU"
        android:id="@+id/textView_menu"
        android:textSize="35sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView_user"
        android:text=""
        android:layout_marginTop="38dp"
        android:textSize="24sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:padding="16dp"
        android:text="@string/activity_planning"
        android:drawableLeft="@drawable/ic_map"
        android:textSize="24sp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:padding="16dp"
        android:text="@string/activity_my_plans"
        android:drawableLeft="@drawable/ic_list"
        android:textSize="24sp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:padding="16dp"
        android:text="@string/activity_settings"
        android:drawableLeft="@drawable/ic_settings"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/bSearch"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:padding="16dp"
        android:text="@string/app_exit"
        android:drawableLeft="@drawable/ic_exit"
        android:textSize="24sp"/>

</LinearLayout>