<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/neptis_blue"
    tools:context="it.uniroma1.neptis.planner.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:drawableTop="@mipmap/ic_logo_white"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textColor="#ffffff"
        android:textAllCaps="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textWebEmailAddress"
        android:ems="10"
        android:id="@+id/editText_mail"
        android:layout_marginTop="20dp"
        android:hint="E-mail"
        android:background="#ffffff"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:imeOptions="actionSend"
        android:background="#ffffff"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_remember_login"
            android:id="@+id/checkBox_rem_login"
            android:checked="false"
            android:textColor="#ffffff" />
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/action_register_user"
            android:id="@+id/button_newuser"
            android:textColor="#ffffff"
            android:gravity="center_vertical"
            android:drawableEnd="@drawable/ic_add_user"
            android:drawablePadding="15dp"
            android:background="@color/neptis_blue"
            android:clickable="true"
            android:onClick="btn_registration"/>
    </LinearLayout>



    <!-- image was 40x40dp -->

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/email_sign_in_button"
        android:text="@string/action_sign_in_short"
        android:background="@drawable/buttonshape"
        android:textColor="#ffffff"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@android:color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#ffffff"
            android:padding="20dp"
            android:textAllCaps="true"
            android:text="@string/or"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@android:color/white"/>

    </LinearLayout>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in_button"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:gravity="center_vertical|center"
        />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_login_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        facebook:com_facebook_login_text="@string/action_sign_in_short"
        />


</LinearLayout>

