<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="it.uniroma1.neptis.planner.Welcome"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView_user"
        android:text=""
        android:layout_marginTop="38dp"
        android:layout_below="@+id/textView_menu"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="24sp" />

    <Button
        android:background="@drawable/planning"
        android:layout_width="80dp"
        android:layout_height="80dp"

        android:id="@+id/button_planning"
        android:layout_below="@+id/textView_user"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp" />



    <Button
        android:background="@drawable/report"

        android:layout_width="80dp"
        android:layout_height="80dp"

        android:id="@+id/button2_report"
        android:layout_alignTop="@+id/button_planning"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView_user"
        android:layout_marginRight="40dp" />

    <Button
        android:background="@drawable/settings"
        android:layout_width="80dp"
        android:layout_height="80dp"

        android:id="@+id/button3_settings"
        android:layout_alignTop="@+id/button_myPlan"
        android:layout_alignLeft="@+id/button2_report"
        android:layout_alignStart="@+id/button2_report"
        android:layout_centerInParent="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="MENU"
        android:id="@+id/textView_menu"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="35dp" />

    <Button
        android:background="@drawable/myplans"
        android:layout_width="80dp"
        android:layout_height="80dp"

        android:id="@+id/button_myPlan"
        android:layout_marginTop="40dp"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/button_planning"
        android:layout_alignRight="@+id/button_planning"
        android:layout_alignEnd="@+id/button_planning" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/activity_planning"
        android:id="@+id/textView7_planning"


        android:layout_below="@+id/button_planning"
        android:layout_alignLeft="@+id/button_planning"

        android:layout_alignStart="@+id/button_planning"

        android:textStyle="bold"
        android:textAllCaps="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/activity_my_plans"
        android:id="@+id/textView7"
        android:layout_below="@+id/button_myPlan"
        android:layout_alignLeft="@+id/button_myPlan"
        android:layout_alignStart="@+id/button_myPlan"
        android:textStyle="bold"
        android:textAllCaps="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/activity_report"
        android:id="@+id/textView8"
        android:layout_below="@+id/button2_report"
        android:layout_alignLeft="@+id/button2_report"
        android:layout_alignStart="@+id/button2_report"
        android:textStyle="bold"
        android:textAllCaps="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/activity_settings"
        android:id="@+id/textView9"
        android:layout_alignTop="@+id/textView7"
        android:layout_alignLeft="@+id/button3_settings"
        android:layout_alignStart="@+id/button3_settings"
        android:textStyle="bold"
        android:textAllCaps="true" />


</RelativeLayout>
